--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "mpdf/mpdf": "^8.0",
         "symfony/yaml": "^5.0",
         "twig/html-extra": "^3.0",
+        "twig/intl-extra": "^3.0",
         "twig/twig": "^3.0"
     },
     "config": {
