--- a/translation/target.yaml.dist
+++ b/translation/target.yaml.dist
@@ -16,7 +16,8 @@ label_supplier_bank: 'Beneficiary bank'
 label_supplier_bank_address: 'Bank address'
 label_swift: 'SWIFT'
 label_supplier_corr_bank: 'Correspondent Bank'
-label_signature: 'Подпис'
+label_signature: 'Signature'
+label_service_quality_agreement: 'Payment of this invoice confirms the fact of agreement of both parties on the quantity and quality of services rendered.'
 
 # Generic data
 
